--- a/src/Api/Api.csproj
+++ b/src/Api/Api.csproj
@@ -15,5 +15,9 @@
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
+  <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <!--<NoWarn>$(NoWarn);1591</NoWarn>-->
+  </PropertyGroup>
 
 </Project>
